家长的公告栏页面减少了“家长已阅情况”按钮权限，填写小盆友信息页面增加了漏选小盆友情况提醒，在该页面取消按钮将返回首页。

--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#4682b4",
-    "navigationBarTitleText": "派作业",
+    "navigationBarTitleText": "首页",
     "navigationBarTextStyle":"white",
     "backgroundColor":"#4682b4"
   }
