--- a/project.config.json
+++ b/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.0.9",
 	"appid": "wx5a6711ff1b8896b9",
-	"projectname": "client",
+	"projectname": "client2",
 	"condition": {
 		"search": {
 			"current": -1,
